# mj-mcp

./: CONTENT_CHECKLIST.md  README.md  ROUTINE_PROMPT.md  SWIMSCORE_BLOG_WORKFLOW.md  flux_generate.py  pyproject.toml
.claude/skills/swimscore-content/: SKILL.md
