[project]
name = "swimscore-blog-tools"
version = "0.2.0"
description = "Tooling and runbook for SwimScore's automated blog content workflow (FLUX hero images + Shopify publishing)"
readme = "README.md"
license = "GPL-3.0"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "pillow>=10.0.0",
]

[tool.uv]
package = false
